--- a/static/vendor.css
+++ b/static/vendor.css
@@ -242,6 +242,66 @@ button:-moz-focusring {
   order: 3;
 }
 
+/* MY CSS STARTED HERE */
+/* Min-width: 360px */
+@media only screen and (min-width: 360px) {
+  .wrapper__main {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .singleCard {
+    flex-basis: 100%;
+    background-color: #ccc;
+    margin: 5px 0;
+    text-align: center;
+  }
+  
+  .singleCard img {
+    border-radius: 50%;
+    border: 3px solid #eceff1;
+    margin-top: 10px;
+    width: 120px;
+  }
+  
+  .details {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  span.info {
+    color: #808080;
+    font-size: 0.8em;
+  }
+}
+
+/* Min-width: 945px */
+@media only screen and (min-width: 945px) {
+  .singleCard img {
+    width: 180px;
+  }
+}
+
+/* Min-width: 1280px */
+@media only screen and (min-width: 1280px) {
+  .singleCard {
+    flex-basis: calc(50% - 10px);
+    margin: 5px;
+  }
+}
+
+/* Min-width: 1680px */
+@media only screen and (min-width: 1680px) { 
+  .singleCard {
+    flex-basis: calc(25% - 10px);
+    margin: 5px;
+  }
+}
+
+
+
+
+
 @media only screen and (min-width: 544px) {
   .sort {
     margin-right: 8px;
