--- a/static/vendor.css
+++ b/static/vendor.css
@@ -60,7 +60,7 @@ button:-moz-focusring {
   height: 40px;
   line-height: 21px;
   line-height: 40px;
-  margin: 0;
+  margin: 15px auto;
   overflow: hidden;
   padding: 0 13px;
   position: relative;
@@ -75,6 +75,7 @@ button:-moz-focusring {
   font-weight: 500;
   letter-spacing: 2px;
   text-transform: uppercase;
+  min-width: 150px;
 }
 
 .button:active {
